# CallAudit-backend

./: .env  .gitignore  README.md  Untitled193.ipynb  alembic.ini  populate_dummy_data.py  pyproject.toml  requirements.txt
RESOURCES/: claude.md
alembic/: env.py
alembic/versions/: 0271e52e936d_added_is_active_column_on_both_.py  3460bd6feaac_initial_migration.py  49011c0d6b17_established_cascade_relationship_.py  9861fa198790_established_cascade_relationship_.py  9f55e197c2d6_established_cascade_relationship_.py  f7e45bfea111_replaced_is_flagged_with_flag_enum.py
docs/source/: api.rst  conf.py  index.rst
src/: config.py  database.py  dependecy.py  dependency.py  main.py  models.py
src/core/: jwt_util.py  logging.py  save_to_s3.py  server.py
src/features/auditor/: dependency.py  repository.py  router.py  schemas.py  services.py
src/features/auth/: dependency.py  repository.py  router.py  schemas.py  services.py
src/features/counsellor/: dependency.py  repository.py  router.py  schemas.py  services.py
src/features/counsellor/utils/: ai_analysis.py
src/features/manager/: dependency.py  repository.py  router.py  schemas.py  services.py
